--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/demo_project/">
+  <base href="/demo_map/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -25,7 +25,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>Pandemic Map Frontend</title>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
