--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>Pandemic Map Frontend</title>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
