--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
-
+https://github.com/Mattstacey321/demo_map/tree/main
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/">
+  <base href="/demo_map">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
