--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ https://github.com/Mattstacey321/demo_map/tree/main
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/demo_map">
+  <base href="/demo_map/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
