--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
-https://github.com/Mattstacey321/demo_map/tree/main
+
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
@@ -17,6 +17,9 @@ https://github.com/Mattstacey321/demo_map/tree/main
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A Very Good new Flutter project.">
+
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.0/mapbox-gl.css' rel='stylesheet' />
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -33,7 +36,7 @@ https://github.com/Mattstacey321/demo_map/tree/main
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1850957880';
+    var serviceWorkerVersion = '443494515';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
